Can Log out and different views are fixed

--- a/TheGym/TheGym/Views/Dashboard/Dashboard.cshtml
+++ b/TheGym/TheGym/Views/Dashboard/Dashboard.cshtml
@@ -60,8 +60,8 @@
         </li>
     
         <li class="logout">
-            <a href="#">
-                    <i class="bi bi-box-arrow-left"></i>
+            <a asp-controller="Account" asp-action="Logout">
+                <i class="bi bi-box-arrow-left"></i>
                 <span>Logout</span>
             </a>
         </li>
