--- a/TheGym/TheGym/wwwroot/css/site.css
+++ b/TheGym/TheGym/wwwroot/css/site.css
@@ -781,7 +781,6 @@ tfoot td{
     height: 80vh;
     position: relative;
     margin: 2% auto;
-    background: #e0fbfc;
     padding: 35px;
     margin-top: 4px;
     overflow: hidden;
@@ -807,6 +806,15 @@ tfoot td{
     height: 120px
 }
 
+.claim_form label {
+    color: white;
+}
+/*Claim create/edit*/
+.claim-input-field {
+}
+
+
+
 @media only screen and (max-width: 1366px) and (max-height: 768px) {
     .form-box {
         height: 120vh;
@@ -814,153 +822,3 @@ tfoot td{
 }
 
 
-/*OLD CODE
-)
-//Landing section
-.welcome {
-    height: 700px;
-    background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.2)), url('/images/gym-bg.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: inline-block;
-    width: 100%;
-    margin-bottom: var(--section-margin);
-    margin-top: 10px;
-    position: relative;
-}
-
-.welcome .landing-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    max-width: 650px;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: #fff;
-    z-index: 1;
-    padding: 20px;
-    // background: rgba(0, 0, 0, 0.5); Adds a darker background behind the text //
-    border-radius: 10px;
-    }
-
-.welcome .landing-text h2{
-    font-size: 3.5rem;
-}
-
-.welcome .landing-text h3 {
-    letter-spacing: 5px;
-    font-size: 1.5rem;
-}
-
-//Program Section
-.program {
-    height: 700px;
-    background-color: gray;
-    display: inline-block;
-    width: 100%;
-    margin-bottom: var(--section-margin);
-}
-
-.schedule {
-    height: 700px;
-    background-color: lightgray;
-    display: inline-block;
-    width: 100%;
-    margin-bottom: var(--section-margin);
-}
-
-.events {
-    height: 700px;
-    background-color: gray;
-    display: inline-block;
-    width: 100%;
-    margin-bottom: var(--section-margin);
-}
-
-//Claims Section//
-.claims {
-    height: 700px;
-    background-color: lightgray;
-    display: grid;
-    width: 100%;
-    margin-bottom: var(--section-margin);
-    overflow-x: hidden;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap: 50px;
-    padding: 5rem 0;
-}
-
-.claims .imgWrapper{
-    overflow: hidden;
-    height: 400px;
-    width: 400px;
-}
-
-.claims .imgWrapper img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: 0.3s;
-}
-
-.claims .imgWrapper:hover img {
-    transform: scale(1.25);
-}
-
-.claims .contentWrapper{
-    width: 100%;
-    display: flex;   
-    justify-content: center;
-    align-items: center;
-    padding-right: 30px;
-
-}
-
-.claims .contentWrapper h2{
-    font-size: 40px;
-    font-weight: 700;
-    color: #383f47;
-    padding-bottom: 20px;
-}
-
-.claims .contentWrapper p {
-    font-size: 20px;
-    line-height: 25px;
-    padding-bottom: 25px;
-    font-weight: 500;
-
-}
-
-.claims .contentWrapper a {
-    display: inline-block;
-    text-decoration: none;
-    text-transform: uppercase;
-    background: #383f47;
-    color: #fff;
-    padding: 15px 40px;
-    letter-spacing: 1px;
-    user-select: none;
-    border: 1px solid black;
-
-}
-
-.claims .contentWrapper a:hover {
-    border: 1px solid black;
-    background: indianred;
-    transition-delay: 0.1s;
-    color: #fff;
-    transform: translateY(-3px)
-}
-
-//About Section//
-.about {
-    height: 700px;
-    background-color: gray;
-    display: inline-block;
-    width: 100%;
-    margin-bottom: var(--section-margin);
-}
-    ///
-
-
-*/
