--- a/TheGym/TheGym/Views/Claim/EditClaim.cshtml
+++ b/TheGym/TheGym/Views/Claim/EditClaim.cshtml
@@ -5,15 +5,15 @@
 
 <div class="row form-box">
 
-    <h2 class="text-center mb-4">Edit Claim</h2>
+    <h2 class="header">Edit Claim</h2>
 
     <form method="post" asp-controller="Claim" asp-action="EditClaim" class="row g-3 claim_form" enctype="multipart/form-data">
         <!-- Your Name -->
-        <div class="row mb-3">
+        <div class="row mb-3 create">
             <div class="col-md-6">
                 <label class="form-label" for="name">Your Name</label>
                 <input id="name"
-                       class="form-control"
+                       class="claim-input-field underline"
                        asp-for="Name" required />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
@@ -22,7 +22,7 @@
             <div class="col-md-6">
                 <label class="form-label" for="surname">Your Surname</label>
                 <input id="surname"
-                       class="form-control"
+                       class="claim-input-field underline"
                        asp-for="Surname" required />
                 <span asp-validation-for="Surname" class="text-danger"></span>
             </div>
@@ -33,7 +33,7 @@
             <div class="col-6">
                 <label class="form-label" for="type">Type Of Claim</label>
                 <select id="type"
-                        class="form-control"
+                        class="form-control custom"
                         asp-for="TypeOfClaim" required>
                     <option selected disabled>Select a claim</option>
                     <option value="employee benefits">Employee Benefits</option>
@@ -45,20 +45,20 @@
             </div>
 
             <!-- Hours Worked -->
-            <div class="col-6">
+            <div class="col-6 create">
                 <label class="form-label" for="hoursworked">Hours Worked</label>
                 <input id="hoursworked"
-                       class="form-control"
+                       class="claim-input-field"
                        asp-for="HoursWorked" required />
                 <span asp-validation-for="HoursWorked" class="text-danger"></span>
             </div>
         </div>
 
         <!-- Hourly Rate -->
-        <div class="col-6">
+        <div class="col-6 create">
             <label class="form-label" for="hoursrate">Hourly Rate ($)</label>
             <input id="hoursrate"
-                   class="form-control"
+                   class="claim-input-field underline"
                    asp-for="HourlyRate" required />
             <span asp-validation-for="HourlyRate" class="text-danger"></span>
         </div>
@@ -68,15 +68,15 @@
             <label class="form-label" for="upload">Upload file [optional]</label>
             <input id="upload"
                    asp-for="File"
-                   class="form-control" />
+                   class="form-control custom" />
             <span asp-validation-for="HourlyRate" class="text-danger"></span>
         </div>
 
         <!-- Description -->
-        <div class="col-12">
+        <div class="col-12 create-d">
             <label class="form-label" for="description">Description</label>
             <textarea id="description"
-                      class="form-control"
+                      class="claim-input-field"
                       asp-for="ClaimDescription" required></textarea>
             <span asp-validation-for="ClaimDescription" class="text-danger"></span>
         </div>
@@ -84,12 +84,14 @@
 
 
         <!-- Buttons -->
-        <div class="row mt-4">
-            <div class="col-sm-4 offset-sm-4 d-grid">
-                <button type="submit" class="btn btn-primary">Save</button>
-            </div>
-            <div class="col-sm-4 d-grid">
-                <a class="btn btn-outline-primary" asp-controller="Claim" asp-action="Index" role="button">Cancel</a>
+        <div class="btn-position">
+            <div class="row mt-4">
+                <div class="col-sm-4 offset-sm-4 d-grid btn-size">
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
+                <div class="col-sm-4 d-grid btn-size">
+                    <a class="btn btn-outline-primary" asp-controller="Claim" asp-action="Index" role="button">Cancel</a>
+                </div>
             </div>
         </div>
     </form>
