--- a/TheGym/TheGym/Views/Claim/CreateClaim.cshtml
+++ b/TheGym/TheGym/Views/Claim/CreateClaim.cshtml
@@ -56,7 +56,7 @@
 
          <!-- Hourly Rate -->
         <div class="col-6 create">
-                <label class="form-label" for="hoursrate">Hourly Rate ($)</label>
+                <label class="form-label" for="hoursrate">Hourly Rate (R)</label>
                     <input id="hoursrate"
                    class="claim-input-field underline"
                    asp-for="HourlyRate" required />
